ui/components/app/snaps/snap-ui-renderer/index.scss
.snap-ui-renderer {
  &__content {
    margin-bottom: 0 !important;
  }

  &__container {
    & > *:first-child {
      padding: 16px;
    }
  }

  &__error {
    margin-top: 0 !important;
  }

  &__spinner {
    width: 30px;
  }

  &__divider {
    width: 100%;
    height: 1px;
  }

  &__input > .mm-text-field {
    border-color: var(--color-border-muted);
  }

  &__panel {
    gap: 8px;

    .mm-icon--size-inherit {
      top: 0;
    }
  }

  &__text {
    i {
      font-style: revert;
    }

    b {
      font-weight: revert;
    }

    span {
      font-style: inherit;
      font-weight: inherit;
    }
  }

  &__image {
    max-width: 100%;
  }

  &__footer {
    margin-top: auto;

    &-centered {
      margin-top: auto;

      & button {
        &:first-child {
          margin-right: 0;
        }
      }
    }

    & button {
      &:first-child {
        margin-right: 16px;
      }
    }
  }
}

